src/decaf/frontend/Parser.output
   0  $accept : Program $end

   1  Program : ClassList

   2  ClassList : ClassList ClassDef
   3            | ClassDef

   4  VariableDef : Variable ';'

   5  Variable : Type IDENTIFIER

   6  Type : INT
   7       | VOID
   8       | BOOL
   9       | STRING
  10       | CLASS IDENTIFIER
  11       | Type '[' ']'

  12  ClassDef : CLASS IDENTIFIER ExtendsClause '{' FieldList '}'
  13           | SEALED CLASS IDENTIFIER ExtendsClause '{' FieldList '}'

  14  ExtendsClause : EXTENDS IDENTIFIER
  15                |

  16  FieldList : FieldList VariableDef
  17            | FieldList FunctionDef
  18            |

  19  Formals : VariableList
  20          |

  21  VariableList : VariableList ',' Variable
  22               | Variable

  23  FunctionDef : STATIC Type IDENTIFIER '(' Formals ')' StmtBlock
  24              | Type IDENTIFIER '(' Formals ')' StmtBlock

  25  StmtBlock : '{' StmtList '}'

  26  StmtList : StmtList Stmt
  27           |

  28  Stmt : VariableDef
  29       | SimpleStmt ';'
  30       | IfStmt
  31       | WhileStmt
  32       | ForStmt
  33       | ReturnStmt ';'
  34       | PrintStmt ';'
  35       | BreakStmt ';'
  36       | StmtBlock
  37       | OCStmt ';'
  38       | GuardedStmt
  39       | ForeachStmt

  40  SimpleStmt : LValue '=' Expr
  41             | Call
  42             |

  43  Receiver : Expr '.'
  44           |

  45  LValue : Receiver IDENTIFIER
  46         | Expr '[' Expr ']'
  47         | VAR IDENTIFIER

  48  Call : Receiver IDENTIFIER '(' Actuals ')'

  49  Expr : LValue
  50       | Call
  51       | Constant
  52       | Expr '+' Expr
  53       | Expr '-' Expr
  54       | Expr '*' Expr
  55       | Expr '/' Expr
  56       | Expr '%' Expr
  57       | Expr EQUAL Expr
  58       | Expr NOT_EQUAL Expr
  59       | Expr '<' Expr
  60       | Expr '>' Expr
  61       | Expr LESS_EQUAL Expr
  62       | Expr GREATER_EQUAL Expr
  63       | Expr AND Expr
  64       | Expr OR Expr
  65       | '(' Expr ')'
  66       | '-' Expr
  67       | '!' Expr
  68       | READ_INTEGER '(' ')'
  69       | READ_LINE '(' ')'
  70       | THIS
  71       | NEW IDENTIFIER '(' ')'
  72       | NEW Type '[' Expr ']'
  73       | INSTANCEOF '(' Expr ',' IDENTIFIER ')'
  74       | '(' CLASS IDENTIFIER ')' Expr
  75       | Expr INITARRAY Expr
  76       | Expr CONCATARRAY Expr
  77       | Expr '[' Expr COLON Expr ']'
  78       | Expr '[' Expr ']' DEFAULT Expr
  79       | '[' Expr FOR IDENTIFIER IN Expr ']'
  80       | '[' Expr FOR IDENTIFIER IN Expr IF Expr ']'

  81  Constant : LITERAL
  82           | NULL
  83           | ArrayConstant

  84  Actuals : ExprList
  85          |

  86  ExprList : ExprList ',' Expr
  87           | Expr

  88  WhileStmt : WHILE '(' Expr ')' Stmt

  89  ForStmt : FOR '(' SimpleStmt ';' Expr ';' SimpleStmt ')' Stmt

  90  BreakStmt : BREAK

  91  IfStmt : IF '(' Expr ')' Stmt ElseClause

  92  ElseClause : ELSE Stmt
  93             |

  94  ReturnStmt : RETURN Expr
  95             | RETURN

  96  PrintStmt : PRINT '(' ExprList ')'

  97  OCStmt : SCOPY '(' IDENTIFIER ',' Expr ')'

  98  GuardedStmt : IF '{' '}'
  99              | IF '{' IfBranchList IfSubStmt '}'

 100  IfBranchList : IfBranchList IfBranch
 101               |

 102  IfBranch : IfSubStmt GUARD

 103  IfSubStmt : Expr COLON Stmt

 104  ArrayConstant : '[' ']'
 105                | '[' ConstantList ']'

 106  ConstantList : ConstantList ',' Constant
 107               | Constant

 108  ForeachStmt : FOREACH '(' BoundVariable IN Expr ')' Stmt
 109              | FOREACH '(' BoundVariable IN Expr WHILE Expr ')' Stmt

 110  BoundVariable : VAR IDENTIFIER
 111                | Type IDENTIFIER

state 0
	$accept : . Program $end  (0)

	CLASS  shift 1
	SEALED  shift 2
	.  error

	Program  goto 3
	ClassList  goto 4
	ClassDef  goto 5


state 1
	ClassDef : CLASS . IDENTIFIER ExtendsClause '{' FieldList '}'  (12)

	IDENTIFIER  shift 6
	.  error


state 2
	ClassDef : SEALED . CLASS IDENTIFIER ExtendsClause '{' FieldList '}'  (13)

	CLASS  shift 7
	.  error


state 3
	$accept : Program . $end  (0)

	$end  accept


state 4
	Program : ClassList .  (1)
	ClassList : ClassList . ClassDef  (2)

	CLASS  shift 1
	SEALED  shift 2
	$end  reduce 1

	ClassDef  goto 8


state 5
	ClassList : ClassDef .  (3)

	.  reduce 3


state 6
	ClassDef : CLASS IDENTIFIER . ExtendsClause '{' FieldList '}'  (12)
	ExtendsClause : .  (15)

	EXTENDS  shift 9
	'{'  reduce 15

	ExtendsClause  goto 10


state 7
	ClassDef : SEALED CLASS . IDENTIFIER ExtendsClause '{' FieldList '}'  (13)

	IDENTIFIER  shift 11
	.  error


state 8
	ClassList : ClassList ClassDef .  (2)

	.  reduce 2


state 9
	ExtendsClause : EXTENDS . IDENTIFIER  (14)

	IDENTIFIER  shift 12
	.  error


state 10
	ClassDef : CLASS IDENTIFIER ExtendsClause . '{' FieldList '}'  (12)

	'{'  shift 13
	.  error


state 11
	ClassDef : SEALED CLASS IDENTIFIER . ExtendsClause '{' FieldList '}'  (13)
	ExtendsClause : .  (15)

	EXTENDS  shift 9
	'{'  reduce 15

	ExtendsClause  goto 14


state 12
	ExtendsClause : EXTENDS IDENTIFIER .  (14)

	.  reduce 14


state 13
	ClassDef : CLASS IDENTIFIER ExtendsClause '{' . FieldList '}'  (12)
	FieldList : .  (18)

	.  reduce 18

	FieldList  goto 15


state 14
	ClassDef : SEALED CLASS IDENTIFIER ExtendsClause . '{' FieldList '}'  (13)

	'{'  shift 16
	.  error


state 15
	ClassDef : CLASS IDENTIFIER ExtendsClause '{' FieldList . '}'  (12)
	FieldList : FieldList . VariableDef  (16)
	FieldList : FieldList . FunctionDef  (17)

	VOID  shift 17
	BOOL  shift 18
	INT  shift 19
	STRING  shift 20
	CLASS  shift 21
	STATIC  shift 22
	'}'  shift 23
	.  error

	VariableDef  goto 24
	Variable  goto 25
	Type  goto 26
	FunctionDef  goto 27


state 16
	ClassDef : SEALED CLASS IDENTIFIER ExtendsClause '{' . FieldList '}'  (13)
	FieldList : .  (18)

	.  reduce 18

	FieldList  goto 28


state 17
	Type : VOID .  (7)

	.  reduce 7


state 18
	Type : BOOL .  (8)

	.  reduce 8


state 19
	Type : INT .  (6)

	.  reduce 6


state 20
	Type : STRING .  (9)

	.  reduce 9


state 21
	Type : CLASS . IDENTIFIER  (10)

	IDENTIFIER  shift 29
	.  error


state 22
	FunctionDef : STATIC . Type IDENTIFIER '(' Formals ')' StmtBlock  (23)

	VOID  shift 17
	BOOL  shift 18
	INT  shift 19
	STRING  shift 20
	CLASS  shift 21
	.  error

	Type  goto 30


state 23
	ClassDef : CLASS IDENTIFIER ExtendsClause '{' FieldList '}' .  (12)

	.  reduce 12


state 24
	FieldList : FieldList VariableDef .  (16)

	.  reduce 16


state 25
	VariableDef : Variable . ';'  (4)

	';'  shift 31
	.  error


state 26
	Variable : Type . IDENTIFIER  (5)
	Type : Type . '[' ']'  (11)
	FunctionDef : Type . IDENTIFIER '(' Formals ')' StmtBlock  (24)

	IDENTIFIER  shift 32
	'['  shift 33
	.  error


state 27
	FieldList : FieldList FunctionDef .  (17)

	.  reduce 17


state 28
	ClassDef : SEALED CLASS IDENTIFIER ExtendsClause '{' FieldList . '}'  (13)
	FieldList : FieldList . VariableDef  (16)
	FieldList : FieldList . FunctionDef  (17)

	VOID  shift 17
	BOOL  shift 18
	INT  shift 19
	STRING  shift 20
	CLASS  shift 21
	STATIC  shift 22
	'}'  shift 34
	.  error

	VariableDef  goto 24
	Variable  goto 25
	Type  goto 26
	FunctionDef  goto 27


state 29
	Type : CLASS IDENTIFIER .  (10)

	.  reduce 10


state 30
	Type : Type . '[' ']'  (11)
	FunctionDef : STATIC Type . IDENTIFIER '(' Formals ')' StmtBlock  (23)

	IDENTIFIER  shift 35
	'['  shift 33
	.  error


state 31
	VariableDef : Variable ';' .  (4)

	.  reduce 4


state 32
	Variable : Type IDENTIFIER .  (5)
	FunctionDef : Type IDENTIFIER . '(' Formals ')' StmtBlock  (24)

	'('  shift 36
	';'  reduce 5


state 33
	Type : Type '[' . ']'  (11)

	']'  shift 37
	.  error


state 34
	ClassDef : SEALED CLASS IDENTIFIER ExtendsClause '{' FieldList '}' .  (13)

	.  reduce 13


state 35
	FunctionDef : STATIC Type IDENTIFIER . '(' Formals ')' StmtBlock  (23)

	'('  shift 38
	.  error


state 36
	FunctionDef : Type IDENTIFIER '(' . Formals ')' StmtBlock  (24)
	Formals : .  (20)

	VOID  shift 17
	BOOL  shift 18
	INT  shift 19
	STRING  shift 20
	CLASS  shift 21
	')'  reduce 20

	Variable  goto 39
	Type  goto 40
	Formals  goto 41
	VariableList  goto 42


state 37
	Type : Type '[' ']' .  (11)

	.  reduce 11


state 38
	FunctionDef : STATIC Type IDENTIFIER '(' . Formals ')' StmtBlock  (23)
	Formals : .  (20)

	VOID  shift 17
	BOOL  shift 18
	INT  shift 19
	STRING  shift 20
	CLASS  shift 21
	')'  reduce 20

	Variable  goto 39
	Type  goto 40
	Formals  goto 43
	VariableList  goto 42


state 39
	VariableList : Variable .  (22)

	.  reduce 22


state 40
	Variable : Type . IDENTIFIER  (5)
	Type : Type . '[' ']'  (11)

	IDENTIFIER  shift 44
	'['  shift 33
	.  error


state 41
	FunctionDef : Type IDENTIFIER '(' Formals . ')' StmtBlock  (24)

	')'  shift 45
	.  error


state 42
	Formals : VariableList .  (19)
	VariableList : VariableList . ',' Variable  (21)

	','  shift 46
	')'  reduce 19


state 43
	FunctionDef : STATIC Type IDENTIFIER '(' Formals . ')' StmtBlock  (23)

	')'  shift 47
	.  error


state 44
	Variable : Type IDENTIFIER .  (5)

	.  reduce 5


state 45
	FunctionDef : Type IDENTIFIER '(' Formals ')' . StmtBlock  (24)

	'{'  shift 48
	.  error

	StmtBlock  goto 49


state 46
	VariableList : VariableList ',' . Variable  (21)

	VOID  shift 17
	BOOL  shift 18
	INT  shift 19
	STRING  shift 20
	CLASS  shift 21
	.  error

	Variable  goto 50
	Type  goto 40


state 47
	FunctionDef : STATIC Type IDENTIFIER '(' Formals ')' . StmtBlock  (23)

	'{'  shift 48
	.  error

	StmtBlock  goto 51


state 48
	StmtBlock : '{' . StmtList '}'  (25)
	StmtList : .  (27)

	.  reduce 27

	StmtList  goto 52


state 49
	FunctionDef : Type IDENTIFIER '(' Formals ')' StmtBlock .  (24)

	.  reduce 24


state 50
	VariableList : VariableList ',' Variable .  (21)

	.  reduce 21


state 51
	FunctionDef : STATIC Type IDENTIFIER '(' Formals ')' StmtBlock .  (23)

	.  reduce 23


state 52
	StmtBlock : '{' StmtList . '}'  (25)
	StmtList : StmtList . Stmt  (26)
	SimpleStmt : .  (42)
	Receiver : .  (44)

	VOID  shift 17
	BOOL  shift 18
	INT  shift 19
	STRING  shift 20
	CLASS  shift 21
	NULL  shift 53
	THIS  shift 54
	WHILE  shift 55
	FOR  shift 56
	IF  shift 57
	RETURN  shift 58
	BREAK  shift 59
	NEW  shift 60
	PRINT  shift 61
	READ_INTEGER  shift 62
	READ_LINE  shift 63
	LITERAL  shift 64
	INSTANCEOF  shift 65
	'-'  shift 66
	'!'  shift 67
	'('  shift 68
	'['  shift 69
	'{'  shift 48
	'}'  shift 70
	SCOPY  shift 71
	VAR  shift 72
	FOREACH  shift 73
	IDENTIFIER  reduce 44
	';'  reduce 42

	VariableDef  goto 74
	Variable  goto 25
	Type  goto 40
	StmtBlock  goto 75
	Stmt  goto 76
	SimpleStmt  goto 77
	IfStmt  goto 78
	WhileStmt  goto 79
	ForStmt  goto 80
	ReturnStmt  goto 81
	PrintStmt  goto 82
	BreakStmt  goto 83
	OCStmt  goto 84
	GuardedStmt  goto 85
	ForeachStmt  goto 86
	LValue  goto 87
	Expr  goto 88
	Call  goto 89
	Receiver  goto 90
	Constant  goto 91
	ArrayConstant  goto 92


state 53
	Constant : NULL .  (82)

	.  reduce 82


state 54
	Expr : THIS .  (70)

	.  reduce 70


state 55
	WhileStmt : WHILE . '(' Expr ')' Stmt  (88)

	'('  shift 93
	.  error


state 56
	ForStmt : FOR . '(' SimpleStmt ';' Expr ';' SimpleStmt ')' Stmt  (89)

	'('  shift 94
	.  error


state 57
	IfStmt : IF . '(' Expr ')' Stmt ElseClause  (91)
	GuardedStmt : IF . '{' '}'  (98)
	GuardedStmt : IF . '{' IfBranchList IfSubStmt '}'  (99)

	'('  shift 95
	'{'  shift 96
	.  error


state 58
	ReturnStmt : RETURN . Expr  (94)
	ReturnStmt : RETURN .  (95)
	Receiver : .  (44)

	NULL  shift 53
	THIS  shift 54
	NEW  shift 60
	READ_INTEGER  shift 62
	READ_LINE  shift 63
	LITERAL  shift 64
	INSTANCEOF  shift 65
	'-'  shift 66
	'!'  shift 67
	'('  shift 68
	'['  shift 69
	VAR  shift 72
	IDENTIFIER  reduce 44
	';'  reduce 95

	LValue  goto 97
	Expr  goto 98
	Call  goto 99
	Receiver  goto 90
	Constant  goto 91
	ArrayConstant  goto 92


state 59
	BreakStmt : BREAK .  (90)

	.  reduce 90


state 60
	Expr : NEW . IDENTIFIER '(' ')'  (71)
	Expr : NEW . Type '[' Expr ']'  (72)

	VOID  shift 17
	BOOL  shift 18
	INT  shift 19
	STRING  shift 20
	CLASS  shift 21
	IDENTIFIER  shift 100
	.  error

	Type  goto 101


state 61
	PrintStmt : PRINT . '(' ExprList ')'  (96)

	'('  shift 102
	.  error


state 62
	Expr : READ_INTEGER . '(' ')'  (68)

	'('  shift 103
	.  error


state 63
	Expr : READ_LINE . '(' ')'  (69)

	'('  shift 104
	.  error


state 64
	Constant : LITERAL .  (81)

	.  reduce 81


state 65
	Expr : INSTANCEOF . '(' Expr ',' IDENTIFIER ')'  (73)

	'('  shift 105
	.  error


state 66
	Expr : '-' . Expr  (66)
	Receiver : .  (44)

	NULL  shift 53
	THIS  shift 54
	NEW  shift 60
	READ_INTEGER  shift 62
	READ_LINE  shift 63
	LITERAL  shift 64
	INSTANCEOF  shift 65
	'-'  shift 66
	'!'  shift 67
	'('  shift 68
	'['  shift 69
	VAR  shift 72
	IDENTIFIER  reduce 44

	LValue  goto 97
	Expr  goto 106
	Call  goto 99
	Receiver  goto 90
	Constant  goto 91
	ArrayConstant  goto 92


state 67
	Expr : '!' . Expr  (67)
	Receiver : .  (44)

	NULL  shift 53
	THIS  shift 54
	NEW  shift 60
	READ_INTEGER  shift 62
	READ_LINE  shift 63
	LITERAL  shift 64
	INSTANCEOF  shift 65
	'-'  shift 66
	'!'  shift 67
	'('  shift 68
	'['  shift 69
	VAR  shift 72
	IDENTIFIER  reduce 44

	LValue  goto 97
	Expr  goto 107
	Call  goto 99
	Receiver  goto 90
	Constant  goto 91
	ArrayConstant  goto 92


state 68
	Expr : '(' . Expr ')'  (65)
	Expr : '(' . CLASS IDENTIFIER ')' Expr  (74)
	Receiver : .  (44)

	CLASS  shift 108
	NULL  shift 53
	THIS  shift 54
	NEW  shift 60
	READ_INTEGER  shift 62
	READ_LINE  shift 63
	LITERAL  shift 64
	INSTANCEOF  shift 65
	'-'  shift 66
	'!'  shift 67
	'('  shift 68
	'['  shift 69
	VAR  shift 72
	IDENTIFIER  reduce 44

	LValue  goto 97
	Expr  goto 109
	Call  goto 99
	Receiver  goto 90
	Constant  goto 91
	ArrayConstant  goto 92


state 69
	Expr : '[' . Expr FOR IDENTIFIER IN Expr ']'  (79)
	Expr : '[' . Expr FOR IDENTIFIER IN Expr IF Expr ']'  (80)
	ArrayConstant : '[' . ']'  (104)
	ArrayConstant : '[' . ConstantList ']'  (105)
	Receiver : .  (44)

	NULL  shift 53
	THIS  shift 54
	NEW  shift 60
	READ_INTEGER  shift 62
	READ_LINE  shift 63
	LITERAL  shift 64
	INSTANCEOF  shift 65
	'-'  shift 66
	'!'  shift 67
	'('  shift 68
	'['  shift 69
	']'  shift 110
	VAR  shift 72
	IDENTIFIER  reduce 44

	LValue  goto 97
	Expr  goto 111
	Call  goto 99
	Receiver  goto 90
	Constant  goto 112
	ArrayConstant  goto 92
	ConstantList  goto 113


state 70
	StmtBlock : '{' StmtList '}' .  (25)

	.  reduce 25


state 71
	OCStmt : SCOPY . '(' IDENTIFIER ',' Expr ')'  (97)

	'('  shift 114
	.  error


state 72
	LValue : VAR . IDENTIFIER  (47)

	IDENTIFIER  shift 115
	.  error


state 73
	ForeachStmt : FOREACH . '(' BoundVariable IN Expr ')' Stmt  (108)
	ForeachStmt : FOREACH . '(' BoundVariable IN Expr WHILE Expr ')' Stmt  (109)

	'('  shift 116
	.  error


state 74
	Stmt : VariableDef .  (28)

	.  reduce 28


state 75
	Stmt : StmtBlock .  (36)

	.  reduce 36


state 76
	StmtList : StmtList Stmt .  (26)

	.  reduce 26


state 77
	Stmt : SimpleStmt . ';'  (29)

	';'  shift 117
	.  error


state 78
	Stmt : IfStmt .  (30)

	.  reduce 30


state 79
	Stmt : WhileStmt .  (31)

	.  reduce 31


state 80
	Stmt : ForStmt .  (32)

	.  reduce 32


state 81
	Stmt : ReturnStmt . ';'  (33)

	';'  shift 118
	.  error


state 82
	Stmt : PrintStmt . ';'  (34)

	';'  shift 119
	.  error


state 83
	Stmt : BreakStmt . ';'  (35)

	';'  shift 120
	.  error


state 84
	Stmt : OCStmt . ';'  (37)

	';'  shift 121
	.  error


state 85
	Stmt : GuardedStmt .  (38)

	.  reduce 38


state 86
	Stmt : ForeachStmt .  (39)

	.  reduce 39


state 87
	SimpleStmt : LValue . '=' Expr  (40)
	Expr : LValue .  (49)

	'='  shift 122
	AND  reduce 49
	OR  reduce 49
	LESS_EQUAL  reduce 49
	GREATER_EQUAL  reduce 49
	EQUAL  reduce 49
	NOT_EQUAL  reduce 49
	'+'  reduce 49
	'-'  reduce 49
	'*'  reduce 49
	'/'  reduce 49
	'%'  reduce 49
	'>'  reduce 49
	'<'  reduce 49
	'.'  reduce 49
	'['  reduce 49
	INITARRAY  reduce 49
	CONCATARRAY  reduce 49


state 88
	Receiver : Expr . '.'  (43)
	LValue : Expr . '[' Expr ']'  (46)
	Expr : Expr . '+' Expr  (52)
	Expr : Expr . '-' Expr  (53)
	Expr : Expr . '*' Expr  (54)
	Expr : Expr . '/' Expr  (55)
	Expr : Expr . '%' Expr  (56)
	Expr : Expr . EQUAL Expr  (57)
	Expr : Expr . NOT_EQUAL Expr  (58)
	Expr : Expr . '<' Expr  (59)
	Expr : Expr . '>' Expr  (60)
	Expr : Expr . LESS_EQUAL Expr  (61)
	Expr : Expr . GREATER_EQUAL Expr  (62)
	Expr : Expr . AND Expr  (63)
	Expr : Expr . OR Expr  (64)
	Expr : Expr . INITARRAY Expr  (75)
	Expr : Expr . CONCATARRAY Expr  (76)
	Expr : Expr . '[' Expr COLON Expr ']'  (77)
	Expr : Expr . '[' Expr ']' DEFAULT Expr  (78)

	AND  shift 123
	OR  shift 124
	LESS_EQUAL  shift 125
	GREATER_EQUAL  shift 126
	EQUAL  shift 127
	NOT_EQUAL  shift 128
	'+'  shift 129
	'-'  shift 130
	'*'  shift 131
	'/'  shift 132
	'%'  shift 133
	'>'  shift 134
	'<'  shift 135
	'.'  shift 136
	'['  shift 137
	INITARRAY  shift 138
	CONCATARRAY  shift 139
	.  error


state 89
	SimpleStmt : Call .  (41)
	Expr : Call .  (50)

	AND  reduce 50
	OR  reduce 50
	LESS_EQUAL  reduce 50
	GREATER_EQUAL  reduce 50
	EQUAL  reduce 50
	NOT_EQUAL  reduce 50
	'+'  reduce 50
	'-'  reduce 50
	'*'  reduce 50
	'/'  reduce 50
	'%'  reduce 50
	'>'  reduce 50
	'<'  reduce 50
	'.'  reduce 50
	';'  reduce 41
	')'  reduce 41
	'['  reduce 50
	INITARRAY  reduce 50
	CONCATARRAY  reduce 50


state 90
	LValue : Receiver . IDENTIFIER  (45)
	Call : Receiver . IDENTIFIER '(' Actuals ')'  (48)

	IDENTIFIER  shift 140
	.  error


state 91
	Expr : Constant .  (51)

	.  reduce 51


state 92
	Constant : ArrayConstant .  (83)

	.  reduce 83


state 93
	WhileStmt : WHILE '(' . Expr ')' Stmt  (88)
	Receiver : .  (44)

	NULL  shift 53
	THIS  shift 54
	NEW  shift 60
	READ_INTEGER  shift 62
	READ_LINE  shift 63
	LITERAL  shift 64
	INSTANCEOF  shift 65
	'-'  shift 66
	'!'  shift 67
	'('  shift 68
	'['  shift 69
	VAR  shift 72
	IDENTIFIER  reduce 44

	LValue  goto 97
	Expr  goto 141
	Call  goto 99
	Receiver  goto 90
	Constant  goto 91
	ArrayConstant  goto 92


state 94
	ForStmt : FOR '(' . SimpleStmt ';' Expr ';' SimpleStmt ')' Stmt  (89)
	SimpleStmt : .  (42)
	Receiver : .  (44)

	NULL  shift 53
	THIS  shift 54
	NEW  shift 60
	READ_INTEGER  shift 62
	READ_LINE  shift 63
	LITERAL  shift 64
	INSTANCEOF  shift 65
	'-'  shift 66
	'!'  shift 67
	'('  shift 68
	'['  shift 69
	VAR  shift 72
	IDENTIFIER  reduce 44
	';'  reduce 42

	SimpleStmt  goto 142
	LValue  goto 87
	Expr  goto 88
	Call  goto 89
	Receiver  goto 90
	Constant  goto 91
	ArrayConstant  goto 92


state 95
	IfStmt : IF '(' . Expr ')' Stmt ElseClause  (91)
	Receiver : .  (44)

	NULL  shift 53
	THIS  shift 54
	NEW  shift 60
	READ_INTEGER  shift 62
	READ_LINE  shift 63
	LITERAL  shift 64
	INSTANCEOF  shift 65
	'-'  shift 66
	'!'  shift 67
	'('  shift 68
	'['  shift 69
	VAR  shift 72
	IDENTIFIER  reduce 44

	LValue  goto 97
	Expr  goto 143
	Call  goto 99
	Receiver  goto 90
	Constant  goto 91
	ArrayConstant  goto 92


state 96
	GuardedStmt : IF '{' . '}'  (98)
	GuardedStmt : IF '{' . IfBranchList IfSubStmt '}'  (99)
	IfBranchList : .  (101)

	'}'  shift 144
	NULL  reduce 101
	THIS  reduce 101
	NEW  reduce 101
	READ_INTEGER  reduce 101
	READ_LINE  reduce 101
	LITERAL  reduce 101
	IDENTIFIER  reduce 101
	INSTANCEOF  reduce 101
	'-'  reduce 101
	'!'  reduce 101
	'('  reduce 101
	'['  reduce 101
	VAR  reduce 101

	IfBranchList  goto 145


state 97
	Expr : LValue .  (49)

	.  reduce 49


state 98
	Receiver : Expr . '.'  (43)
	LValue : Expr . '[' Expr ']'  (46)
	Expr : Expr . '+' Expr  (52)
	Expr : Expr . '-' Expr  (53)
	Expr : Expr . '*' Expr  (54)
	Expr : Expr . '/' Expr  (55)
	Expr : Expr . '%' Expr  (56)
	Expr : Expr . EQUAL Expr  (57)
	Expr : Expr . NOT_EQUAL Expr  (58)
	Expr : Expr . '<' Expr  (59)
	Expr : Expr . '>' Expr  (60)
	Expr : Expr . LESS_EQUAL Expr  (61)
	Expr : Expr . GREATER_EQUAL Expr  (62)
	Expr : Expr . AND Expr  (63)
	Expr : Expr . OR Expr  (64)
	Expr : Expr . INITARRAY Expr  (75)
	Expr : Expr . CONCATARRAY Expr  (76)
	Expr : Expr . '[' Expr COLON Expr ']'  (77)
	Expr : Expr . '[' Expr ']' DEFAULT Expr  (78)
	ReturnStmt : RETURN Expr .  (94)

	AND  shift 123
	OR  shift 124
	LESS_EQUAL  shift 125
	GREATER_EQUAL  shift 126
	EQUAL  shift 127
	NOT_EQUAL  shift 128
	'+'  shift 129
	'-'  shift 130
	'*'  shift 131
	'/'  shift 132
	'%'  shift 133
	'>'  shift 134
	'<'  shift 135
	'.'  shift 136
	'['  shift 137
	INITARRAY  shift 138
	CONCATARRAY  shift 139
	';'  reduce 94


state 99
	Expr : Call .  (50)

	.  reduce 50


state 100
	Expr : NEW IDENTIFIER . '(' ')'  (71)

	'('  shift 146
	.  error


state 101
	Type : Type . '[' ']'  (11)
	Expr : NEW Type . '[' Expr ']'  (72)

	'['  shift 147
	.  error


state 102
	PrintStmt : PRINT '(' . ExprList ')'  (96)
	Receiver : .  (44)

	NULL  shift 53
	THIS  shift 54
	NEW  shift 60
	READ_INTEGER  shift 62
	READ_LINE  shift 63
	LITERAL  shift 64
	INSTANCEOF  shift 65
	'-'  shift 66
	'!'  shift 67
	'('  shift 68
	'['  shift 69
	VAR  shift 72
	IDENTIFIER  reduce 44

	LValue  goto 97
	Expr  goto 148
	Call  goto 99
	Receiver  goto 90
	Constant  goto 91
	ArrayConstant  goto 92
	ExprList  goto 149


state 103
	Expr : READ_INTEGER '(' . ')'  (68)

	')'  shift 150
	.  error


state 104
	Expr : READ_LINE '(' . ')'  (69)

	')'  shift 151
	.  error


state 105
	Expr : INSTANCEOF '(' . Expr ',' IDENTIFIER ')'  (73)
	Receiver : .  (44)

	NULL  shift 53
	THIS  shift 54
	NEW  shift 60
	READ_INTEGER  shift 62
	READ_LINE  shift 63
	LITERAL  shift 64
	INSTANCEOF  shift 65
	'-'  shift 66
	'!'  shift 67
	'('  shift 68
	'['  shift 69
	VAR  shift 72
	IDENTIFIER  reduce 44

	LValue  goto 97
	Expr  goto 152
	Call  goto 99
	Receiver  goto 90
	Constant  goto 91
	ArrayConstant  goto 92


state 106
	Receiver : Expr . '.'  (43)
	LValue : Expr . '[' Expr ']'  (46)
	Expr : Expr . '+' Expr  (52)
	Expr : Expr . '-' Expr  (53)
	Expr : Expr . '*' Expr  (54)
	Expr : Expr . '/' Expr  (55)
	Expr : Expr . '%' Expr  (56)
	Expr : Expr . EQUAL Expr  (57)
	Expr : Expr . NOT_EQUAL Expr  (58)
	Expr : Expr . '<' Expr  (59)
	Expr : Expr . '>' Expr  (60)
	Expr : Expr . LESS_EQUAL Expr  (61)
	Expr : Expr . GREATER_EQUAL Expr  (62)
	Expr : Expr . AND Expr  (63)
	Expr : Expr . OR Expr  (64)
	Expr : '-' Expr .  (66)
	Expr : Expr . INITARRAY Expr  (75)
	Expr : Expr . CONCATARRAY Expr  (76)
	Expr : Expr . '[' Expr COLON Expr ']'  (77)
	Expr : Expr . '[' Expr ']' DEFAULT Expr  (78)

	'.'  shift 136
	'['  shift 137
	WHILE  reduce 66
	FOR  reduce 66
	IF  reduce 66
	AND  reduce 66
	OR  reduce 66
	LESS_EQUAL  reduce 66
	GREATER_EQUAL  reduce 66
	EQUAL  reduce 66
	NOT_EQUAL  reduce 66
	'+'  reduce 66
	'-'  reduce 66
	'*'  reduce 66
	'/'  reduce 66
	'%'  reduce 66
	'>'  reduce 66
	'<'  reduce 66
	','  reduce 66
	';'  reduce 66
	')'  reduce 66
	']'  reduce 66
	COLON  reduce 66
	INITARRAY  reduce 66
	CONCATARRAY  reduce 66


state 107
	Receiver : Expr . '.'  (43)
	LValue : Expr . '[' Expr ']'  (46)
	Expr : Expr . '+' Expr  (52)
	Expr : Expr . '-' Expr  (53)
	Expr : Expr . '*' Expr  (54)
	Expr : Expr . '/' Expr  (55)
	Expr : Expr . '%' Expr  (56)
	Expr : Expr . EQUAL Expr  (57)
	Expr : Expr . NOT_EQUAL Expr  (58)
	Expr : Expr . '<' Expr  (59)
	Expr : Expr . '>' Expr  (60)
	Expr : Expr . LESS_EQUAL Expr  (61)
	Expr : Expr . GREATER_EQUAL Expr  (62)
	Expr : Expr . AND Expr  (63)
	Expr : Expr . OR Expr  (64)
	Expr : '!' Expr .  (67)
	Expr : Expr . INITARRAY Expr  (75)
	Expr : Expr . CONCATARRAY Expr  (76)
	Expr : Expr . '[' Expr COLON Expr ']'  (77)
	Expr : Expr . '[' Expr ']' DEFAULT Expr  (78)

	'.'  shift 136
	'['  shift 137
	WHILE  reduce 67
	FOR  reduce 67
	IF  reduce 67
	AND  reduce 67
	OR  reduce 67
	LESS_EQUAL  reduce 67
	GREATER_EQUAL  reduce 67
	EQUAL  reduce 67
	NOT_EQUAL  reduce 67
	'+'  reduce 67
	'-'  reduce 67
	'*'  reduce 67
	'/'  reduce 67
	'%'  reduce 67
	'>'  reduce 67
	'<'  reduce 67
	','  reduce 67
	';'  reduce 67
	')'  reduce 67
	']'  reduce 67
	COLON  reduce 67
	INITARRAY  reduce 67
	CONCATARRAY  reduce 67


state 108
	Expr : '(' CLASS . IDENTIFIER ')' Expr  (74)

	IDENTIFIER  shift 153
	.  error

